# tf_servering_cpp

./: CMakeLists.txt  README.md  inception_client.cc  install.sh
serving_cmake/: FindTensorflowCC.cmake
